<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background= "@drawable/custom_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_logo"
            android:contentDescription="@string/RentEasy_logo"
            />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTxt_16."

            android:id="@+id/main_email"
            android:layout_below="@id/logo"
            android:drawableStart="@drawable/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTxt_16."

            android:layout_below="@id/main_email"
            android:id="@+id/main_pass"
            android:layout_marginTop="@dimen/_10sdp"

            android:drawableStart="@drawable/password"
            android:hint="@string/pass"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />

        <CheckBox
            android:id="@+id/Remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_pass"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:buttonTint="@color/white_trans"
            android:text="@string/remember"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Remember"

            style="@style/btn_style_16_1"
            android:text="@string/login"
            android:textColor="@color/Pink"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/Login"
            style="@style/btn_style_16_2"
            android:text="@string/sign_up"
            android:textColor="@color/white_trans"
            tools:ignore="VisualLintButtonSize,TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/Forgot_Pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SignUp"
            style="@style/txtView_Style_Login_UI"


            android:fontFamily="@font/acme"
            android:text="@string/forgot_pass"
            android:textColor="@color/Dark_Blue"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>


</ScrollView>