<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background= "@drawable/custom_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user"
            android:hint="@string/Uname"
            android:inputType="text"
            style="@style/editTxt_16."
            android:autofillHints="true"

            />
        <EditText

            android:id="@+id/main_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/editTxt_16."
            android:layout_below="@id/name"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableStart="@drawable/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="true"
            android:importantForAutofill="yes"
             />
        <EditText
            android:id="@+id/phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_email"
            android:drawableStart="@drawable/phone"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/contact_no"
            android:inputType="phone"
            android:maxLength="10"
            style="@style/editTxt_16."
            android:autofillHints="true"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTxt_16."

            android:layout_below="@id/phone_no"
            android:id="@+id/main_pass"
            android:layout_marginTop="@dimen/_10sdp"

            android:drawableStart="@drawable/password"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:autofillHints="true"
            android:importantForAutofill="yes"
             />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTxt_16."

            android:layout_below="@id/main_pass"
            android:id="@+id/confirm_pass"
            android:layout_marginTop="@dimen/_10sdp"

            android:drawableStart="@drawable/password"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:autofillHints="true"
            android:importantForAutofill="yes"
            />



        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_pass"

            style="@style/btn_style_16_1"
            android:text="@string/sign_up"
            android:textColor="@color/Pink"
             />

        <TextView
            android:id="@+id/Have_an_acc"
            style="@style/txtView_Style_Login_UI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SignUp"


            android:fontFamily="@font/acme"
            android:text="@string/Acc_exists"
            android:textColor="@color/Dark_Blue"
            />
        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"

            android:layout_below="@+id/Have_an_acc"
            style="@style/btn_style_16_2"
            android:text="@string/login"
            android:textColor="@color/white_trans"
             />

    </RelativeLayout>


</ScrollView>